--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
+  google_fonts: 6.1.0
 
 dev_dependencies:
   flutter_test:
